--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="error_auth_failure">Oops! RottenTomatoes Says It Doesn\'t Recognize You</string>
     <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
     <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
+    <string name="title_activity_main_activity_detail">Bidhaa</string>
 
 </resources>
