--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
     <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
     <string name="title_activity_main_activity_detail">Bidhaa</string>
+    <string name="title_activity_main_activity_click">MainActivityClick</string>
 
 </resources>
