--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
     <string name="title_activity_main_activity_detail">Bidhaa</string>
     <string name="title_activity_main_activity_click">MainActivityClick</string>
+    <string name="menuSearch">Search</string>
+    <string name="search_hint">Samsung</string>
 
 </resources>
