The best is coming out one of the best achievement made so far with google analytics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,9 @@
     <string name="title_activity_main_activity_soko">MainActivitySoko</string>
     <string name="title_activity_main_activity2">MainActivity2Activity</string>
 
+
+    <string name="title_section1">Weka Picha</string>
+    <string name="title_section2">Maelezo</string>
+    <string name="title_section3">Maelezo</string>
+
 </resources>
