--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,10 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="error_timeout">Oops! Your Connection Timed Out</string>
-    <string name="error_auth_failure">Oops! RottenTomatoes Says It Doesn\'t Recognize You</string>
-    <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
-    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
+    <string name="error_timeout">Oops! Tatizo la mtandao, futa chini</string>
+    <string name="error_auth_failure">Oops! Tatizo la kimtandao </string>
+    <string name="error_network">Oops! Mitambo ya soko huru kun tatizo</string>
+    <string name="error_parser">Oops! Tatizo la kupokea taarifa</string>
     <string name="title_activity_main_activity_detail">Bidhaa</string>
     <string name="title_activity_main_activity_click">MainActivityClick</string>
     <string name="menuSearch">Search</string>
